--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,12 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint-config-airbnb-base",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "eslint-config-prettier"
-  ],
-  "plugins": [
-    "eslint-plugin-prettier",
-    "@typescript-eslint",
     "prettier"
   ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
